Prevent brand logo from overflowing out of header

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -53,3 +53,11 @@ footer.page-footer {
     align-items: center;
   }
 }
+
+@media only screen and (min-width: 601px) and (max-width: 736px) {
+  nav .brand-logo {
+    left: 0;
+    position: inherit !important;
+    transform: translateX(0%) !important;
+  }
+}
